
3.15	2007-?-?

	* Actions section added to File menu
	* Sharper image reduction toggle added to "Scale Canvas"
	* Spacing for non-continuous tools is now configurable - right click the continuous mode toggle
	* "Filtered" drawing mode added
	* PNG compression level made configurable
	* "Unassociate Alpha" operation added to Channels menu
	* TGA file format save/load added
	* Lanczos3 rescaling filter removed due to unfavourable results

3.11	2007-?-?

	* Slovak translation added by Jozef Riha
	* French translation updated by Sylvain Cresto
	* LSS16 file format load/save added to support syslinux bootup splash screens
	* Clipboard alpha is now used as clipboard mask when pasting to image without alpha channel
	* "Resize Canvas" can now be used to offset an image, with or without changing its size
	* TIFF files with alpha saved by Photoshop now load properly
	* Bash-specific idioms in configure script replaced by POSIXy equivalents
	* Zoom combo boxes now are better behaving in GTK+1
	* BUGFIX - Negative values in "Transform Colour" and "Resize Canvas" dialogs are read correctly again
	* BUGFIX - Drawing a 2 pixels high filled ellipse doesn't cause crash
	* BUGFIX - Tool cursor now doesn't revert to default one after showing or hiding view window
	* BUGFIX - Keyboard shortcut for swapping colours A & B now works in GTK+1
	* BUGFIX - Clicking the palette grid in gradient editor now works properly in GTK+1
	* BUGFIX - All spin buttons are now wide enough in GTK+1

3.10	2007-1-22

	* Gradient drawing mode added
	* Palette shifting feature added to Palette menu
	* Turkish translation added by Muhammet Kara, Tutku Dalmaz
	* Taiwanese Chinese translation added by Wei-Lun Chao
	* Image tiling mode added to "Resize Canvas"
	* Greyscale effect now respects masking
	* Gamma corrected greyscale effect added
	* Gaussian blur effect replaces the old blur effect
	* Unsharp mask effect added
	* More palette sort modes added