@@ -182,10 +182,10 @@ void init_factions()
 		{"Edit Clipboards", "mtpaint ~/.clip*"},
 		{"Time delayed screenshot", "sleep 10; mtpaint -s &"},
 		{"View image information", "xterm -hold -sb -rightbar -geometry 100x100 -e identify -verbose %f"},
-		{"!Create temp directory", "mkdir ~/images"},
-		{"!Remove temp directory", "rm -rf ~/images"},
-		{"!GIF to PNG conversion (in situ)", "mogrify -format png *.gif"},
-		{"!ICO to PNG conversion (temp directory)", "ls --file-type *.ico | xargs -I FILE convert FILE ~/images/FILE.png"},
+		{"#Create temp directory", "mkdir ~/images"},
+		{"#Remove temp directory", "rm -rf ~/images"},
+		{"#GIF to PNG conversion (in situ)", "mogrify -format png *.gif"},
+		{"#ICO to PNG conversion (temp directory)", "ls --file-type *.ico | xargs -I FILE convert FILE ~/images/FILE.png"},
 		{"Convert image to ICO file", "mogrify -format ico %f"},
 		{"Create thumbnails in temp directory", "ls --file-type * | xargs -I FILE convert FILE -thumbnail 120x120 -sharpen 1 -quality 95 ~/images/th_FILE.jpg"},
 		{"Create thumbnails (in situ)", "ls --file-type * | xargs -I FILE convert FILE -thumbnail 120x120 -sharpen 1 -quality 95 th_FILE.jpg"},
