@@ -32,7 +32,7 @@ void pressed_pan( GtkMenuItem *menu_item, gpointer user_data );
 void pressed_centralize( GtkMenuItem *menu_item, gpointer user_data );	// Menu clicked
 void pressed_view( GtkMenuItem *menu_item, gpointer user_data );	// Menu clicked
 void pressed_view_focus( GtkMenuItem *menu_item, gpointer user_data );	// Menu clicked
-void init_view( GtkWidget *canvas );			// Initial setup
+void init_view();			// Initial setup
 void view_show();
 void view_hide();
 
