@@ -13,6 +13,8 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* PNG compression level made configurable
 	* "Unassociate Alpha" operation added to Channels menu
 	* TGA file format save/load added
+	* Max-min quantizer added - creates small palettes with higher saturation and contrast
+	* Full error precision toggle added to settings page of 'Convert To Indexed' window
 	* Lanczos3 rescaling filter removed due to unfavourable results
 
 3.11	2007-?-?
@@ -24,13 +26,15 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* "Resize Canvas" can now be used to offset an image, with or without changing its size
 	* TIFF files with alpha saved by Photoshop now load properly
 	* Bash-specific idioms in configure script replaced by POSIXy equivalents
-	* Zoom combo boxes now are better behaving in GTK+1
+	* Zoom combo boxes are now better behaved in GTK+1
+	* DL3 quantizer now faster by about 30%
 	* BUGFIX - Negative values in "Transform Colour" and "Resize Canvas" dialogs are read correctly again
 	* BUGFIX - Drawing a 2 pixels high filled ellipse doesn't cause crash
 	* BUGFIX - Tool cursor now doesn't revert to default one after showing or hiding view window
 	* BUGFIX - Keyboard shortcut for swapping colours A & B now works in GTK+1
 	* BUGFIX - Clicking the palette grid in gradient editor now works properly in GTK+1
 	* BUGFIX - All spin buttons are now wide enough in GTK+1
+	* BUGFIX - No more redraw glitches when toggling view window on/off in GTK+1
 
 3.10	2007-1-22
 
